[gd_scene load_steps=6 format=3 uid="uid://cn2efo40lh764"]

[ext_resource type="Script" path="res://src/main/scene/ui/BoostsScreen/boosts_screen.gd" id="1_du2or"]
[ext_resource type="PackedScene" uid="uid://mlcphc0o3ojt" path="res://src/main/scene/ui/Common/BoostCard/boost_card.tscn" id="2_x0rqu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7778"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yorau"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wxemd"]

[node name="BoostsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_du2or")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Panel0" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_f7778")

[node name="BoostCard_0" parent="HBoxContainer/Panel0" instance=ExtResource("2_x0rqu")]
layout_mode = 2
offset_bottom = 96.0

[node name="Panel1" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_yorau")

[node name="BoostCard_1" parent="HBoxContainer/Panel1" instance=ExtResource("2_x0rqu")]
layout_mode = 2
offset_bottom = 96.0

[node name="Panel2" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wxemd")

[node name="BoostCard_2" parent="HBoxContainer/Panel2" instance=ExtResource("2_x0rqu")]
layout_mode = 2
offset_bottom = 96.0
